Fixed gaps and extra wide paddings on inputs

--- a/stylesheets/components/input.styl
+++ b/stylesheets/components/input.styl
@@ -15,7 +15,7 @@ input, select, keygen, textarea {
 
   display: inline-block;
   box-sizing: border-box
-  padding: .25em .75em;
+  padding: .25em .5em;
 
   vertical-align: middle;
   outline: 0;
