--- a/stylesheets/core/helpers.styl
+++ b/stylesheets/core/helpers.styl
@@ -69,3 +69,10 @@ for c in ui-colors {
   }
 
 }
+
+// Прозрачность
+
+.opacity-25 { opacity: .25 }
+.opacity-50 { opacity: .50 }
+.opacity-75 { opacity: .75 }
+
