--- a/stylesheets/structures/workspace.styl
+++ b/stylesheets/structures/workspace.styl
@@ -130,7 +130,7 @@
 // административных интерфейсов
 
 .workspace-section {
-  padding: gap;
+  padding: 0 gap;
 }
 
 .workspace-section + .workspace-section {
